# truly-blockchain

./: Cargo.toml  README.md
res/evm/: LightNFT.abi  SimpleTest.abi
res/ganache/: Dockerfile
res/sui/: README.md
res/sui/truly/: Move.toml  sui.log.2023-06-06  sui.log.2023-06-09
res/sui/truly/sources/: hasher.move
src/: lib.rs
src/blockchains/: chain.rs  ganache.rs  mod.rs  sui.rs
src/errors/: asset.rs  block_tx.rs  blockchain.rs  contract.rs  keypair.rs  mod.rs  nft.rs
src/models/: block_tx.rs  blockchain.rs  contract.rs  keypair.rs  mod.rs
src/repositories/: block_tx.rs  blockchain.rs  contract.rs  keypairs.rs  mod.rs  schema_block_tx.rs  schema_blockchain.rs  schema_contract.rs  schema_keypairs.rs
src/services/: block_tx.rs  contract.rs  mod.rs  nfts.rs
test/: lib.rs  nfts_ganache_tests.rs  nfts_sui_tests.rs  nfts_tests.rs
