[package]
name = "lib_blockchain"
version = "0.0.1"
edition = "2021"
autotests = false

[lib]
name = "lib_blockchain"
crate-type = ["lib"]

[[test]]
name = "integration"
path = "test/lib.rs"


[dependencies]
lib_config = { git="https://github.com/joanmiespada/truly-shared" }
lib_async_ops = { git="https://github.com/joanmiespada/truly-shared" }
#lib_licenses = { path = "../lib_licenses" }
log = "0.4.19"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
rust-argon2 = "1.0.0"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
async-trait = "0.1.71"
tracing = { version = "0.1", features = ["log"] }
validator = { version = "0.16", features = ["derive"] }
http = "0.2.9"
http-serde = "1.1.2"
url = { version = "2.4.0", features = ["serde"] }
hex = "0.4.3"
web3 = { version = "0.18.0", default-features = false, features = [
    "http-rustls-tls",
    "signing",
] }
secp256k1 = { version = "=0.21", features = [
    "rand",
] } # for other dependenzies with Ganache it must 0.21
rand = "0.8.5"
aws-sdk-kms = "0.28.0"
aws-sdk-secretsmanager = "0.28.0"
base64 = "0.21.2"
uuid = { version = "1.4.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
tokio = { version = "1.29", features = ["macros"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
sui-sdk = { git = "https://github.com/MystenLabs/sui/", tag= "mainnet-v1.3.2" }
sui-keys = { git = "https://github.com/MystenLabs/sui/", tag= "mainnet-v1.3.2" }
sui-types = { git = "https://github.com/MystenLabs/sui/", tag= "mainnet-v1.3.2" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui/", tag= "mainnet-v1.3.2" }
sui-json-rpc = { git = "https://github.com/MystenLabs/sui/", tag= "mainnet-v1.3.2" }
shared-crypto = { git = "https://github.com/MystenLabs/sui/", tag= "mainnet-v1.3.2" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
zeroize = "1.6.0"
dirs = "5.0"
bincode = "1.3.3"


[target.aarch64-apple-darwin.dev-dependencies]
#[dev-dependencies]
env_logger = "0.10.0"
aws-types = "0.55.3"
spectral = "0.6.0"
#testcontainers = "0.14.0"
testcontainers = { git = "https://github.com/joanmiespada/testcontainers-rs", branch = "localstack2" }
tokio = { version = "1.29.1", features = ["full"] }
ethers = "2.0.8"
ethers-solc = "2.0.8"
reqwest= { version = "0.11.18", features = ["json"]}
